webroot/css/style.css
/* ... */
  
  
  
  
  #demo-mobile-wrapper{
    min-height: 200vmin;
    width: 100vw;
  }
  
  #demo-mobile-details {
    margin: 8px auto;
    display: block;
    width: 67vw;
  }
  
  #mobile-outer {
    background-image: url("https://image.ibb.co/bucnbL/black-iphone.png");
    background-position: center;
    background-repeat: no-repeat;
    background-size: 346px 178vmin;
  }
  
  #demo-mobile-wrapper #demo-text {
    font-size: 5.5vmin;
    margin: 11vmin 0;
  }
  
  #demo-mobile-adtype {
    font-family: "Bebas Neue", bebas, helvetica, sans-serif !important;
    font-size: 26px;
  }
  
  #demo-mobile-wrapper #demo-details {
    margin: 0 4vmin;
  }
  
  .demo-mobile-description {
    float: inline-start;
    text-align: justify;
    margin: 2vmin 0;
  }
  
  #demo-iframe #mobile-outer {
    min-height: 186vmin;
    margin: 2vmin 0;
    position: absolute;
  }
  
  #wrapper-iframe {
    position: relative;
    width: 96vmin;
    height: 140vmin;
    min-width: 302px;
    top: 21vmin;
    left: 3.5vmin;
  }
  
  #demo-iframe #mobile-outer .image {
    height: 140vmin;
    min-width: 318px;
  }
  
  .dropdown-mobile {
    float: left;
  }
  
  #dropdown-mobile-menu-button {
    background-color: transparent;
    color: black;
    border-radius: 0;
    border-color: #c5c5c5;
    border-width: 2px;
    font-size: 18px;
    line-height: 26px;
    width: 101px;
    text-align: left;
    padding: 6px;
    margin-right: 4vw;
    letter-spacing: 1px;
  }
  
  
  
  
  
  .gl-input-field {
    margin-bottom: 0.5rem;
    width: 85%;
    max-width: 100%;
    padding-left: 6px;
    font-size: 1rem;
  }
  
  #send-message {
    padding: 0.9em 0;
    width: 20%;
  }
  
  #send-message-mobile, #send-message {
    cursor: pointer;
  }
  
  .form-intro {
    font-family: "open sans", helvetica, sans-serif;
    font-size: 22px;
    margin-bottom: 34px;
    width: 85%;
  }
  
  .gl-button-link-black{
    line-height: 17px;
    padding: 1rem !important;
    font-size: 2.5vmin;
  }
  
  .container-fluid, .col-md-12 {
    padding: 0;
  }
  
  

